# ai-job-match-maker

./: .env_example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  jobs_app.py  main.py  pyproject.toml  user_profile.json
ai_agent/: job_matcher.py  reset_scores.py  score_jobs.py  scoring_workflow.py
data_loader/: load_jobs.py
db_migrations/: 001_create_job_table.sql  002_add_not_interested_col.sql  003_add_job_scoring.sql  004_add_application_tracking.sql
dev/: scapper_dev.ipynb
scraper/: linkedin_job_scrapper.py
scrapper/: linkedin_job_scrapper.py  test.py
user_profile/: profile_manager.py  user_background.json  user_background_example.json
